# commit-manager

./: pyproject.toml
commit_manager/: cli.py  commit_manager.py  prompt_manager.py
config/: prompts.toml
